--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -245,6 +245,8 @@ jobs:
         # which xfail on a pending release of pydantic-core
       - run: pdm run pytest --override-ini=xfail_strict=False
         working-directory: pydantic
+        env:
+          PYDANTIC_PRIVATE_ALLOW_UNHANDLED_SCHEMA_TYPES: 1
 
   lint:
     runs-on: ubuntu-latest
