Add documentation for annotations resolving

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -146,6 +146,7 @@ nav:
     - Timezone Name: api/pydantic_extra_types_timezone_name.md
     - ULID: api/pydantic_extra_types_ulid.md
 - Architecture: architecture.md
+- Annotations resolving: annotations_resolving.md
 - Examples:
   - Validating File Data: examples/files.md
   - Web and API Requests: examples/requests.md
