--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,7 +97,7 @@ nav:
   - Serialization: concepts/serialization.md
   - Validators: concepts/validators.md
   - Dataclasses: concepts/dataclasses.md
-  - Postponed Annotations: concepts/postponed_annotations.md
+  - Forward Annotations: concepts/forward_annotations.md
   - Strict Mode: concepts/strict_mode.md
   - Type Adapter: concepts/type_adapter.md
   - Validation Decorator: concepts/validation_decorator.md
@@ -147,7 +147,7 @@ nav:
     - ULID: api/pydantic_extra_types_ulid.md
 - Internals:
   - Architecture: internals/architecture.md
-  - Annotations resolving: internals/annotations_resolving.md
+  - Resolving Annotations: internals/resolving_annotations.md
 - Examples:
   - Validating File Data: examples/files.md
   - Web and API Requests: examples/requests.md
@@ -277,7 +277,8 @@ plugins:
       'usage/fields.md': 'concepts/fields.md'
       'usage/json_schema.md': 'concepts/json_schema.md'
       'usage/models.md': 'concepts/models.md'
-      'usage/postponed_annotations.md': 'concepts/postponed_annotations.md'
+      'usage/postponed_annotations.md': 'concepts/forward_annotations.md'
+      'concepts/postponed_annotations.md': 'concepts/forward_annotations.md'
       'usage/pydantic_settings.md': 'concepts/pydantic_settings.md'
       'usage/serialization.md': 'concepts/serialization.md'
       'usage/strict_mode.md': 'concepts/strict_mode.md'
