--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,7 +97,7 @@ nav:
   - Serialization: concepts/serialization.md
   - Validators: concepts/validators.md
   - Dataclasses: concepts/dataclasses.md
-  - Postponed Annotations: concepts/postponed_annotations.md
+  - Forward Annotations: concepts/forward_annotations.md
   - Strict Mode: concepts/strict_mode.md
   - Type Adapter: concepts/type_adapter.md
   - Validation Decorator: concepts/validation_decorator.md
@@ -145,7 +145,9 @@ nav:
     - Semantic Version: api/pydantic_extra_types_semantic_version.md
     - Timezone Name: api/pydantic_extra_types_timezone_name.md
     - ULID: api/pydantic_extra_types_ulid.md
-- Architecture: architecture.md
+- Internals:
+  - Architecture: internals/architecture.md
+  - Resolving Annotations: internals/resolving_annotations.md
 - Examples:
   - Validating File Data: examples/files.md
   - Web and API Requests: examples/requests.md
@@ -275,7 +277,8 @@ plugins:
       'usage/fields.md': 'concepts/fields.md'
       'usage/json_schema.md': 'concepts/json_schema.md'
       'usage/models.md': 'concepts/models.md'
-      'usage/postponed_annotations.md': 'concepts/postponed_annotations.md'
+      'usage/postponed_annotations.md': 'concepts/forward_annotations.md'
+      'concepts/postponed_annotations.md': 'concepts/forward_annotations.md'
       'usage/pydantic_settings.md': 'concepts/pydantic_settings.md'
       'usage/serialization.md': 'concepts/serialization.md'
       'usage/strict_mode.md': 'concepts/strict_mode.md'
@@ -295,3 +298,4 @@ plugins:
       'blog/pydantic-v2.md': 'https://pydantic.dev/articles/pydantic-v2'
       'examples/secrets.md': 'api/types.md#pydantic.types.Secret'
       'examples/validators.md': 'examples/custom_validators.md'
+      'architecture.md': 'internals/architecture.md'
