--- a/tests/mypy/configs/mypy-plugin-strict.ini
+++ b/tests/mypy/configs/mypy-plugin-strict.ini
@@ -10,6 +10,13 @@ check_untyped_defs = True
 no_implicit_reexport = True
 disallow_untyped_defs = True
 
+python_version = 3.10
+
+# 3.9 drop the following line:
+force_uppercase_builtins = True
+# 3.10 drop the following line:
+force_union_syntax = True
+
 [pydantic-mypy]
 init_forbid_extra = True
 init_typed = True
