--- a/tests/mypy/configs/mypy-plugin-very-strict.ini
+++ b/tests/mypy/configs/mypy-plugin-very-strict.ini
@@ -1,6 +1,14 @@
 [mypy]
 plugins = pydantic.mypy
 strict = True
+follow_imports = silent
+
+python_version = 3.10
+
+# 3.9 drop the following line:
+force_uppercase_builtins = True
+# 3.10 drop the following line:
+force_union_syntax = True
 
 [pydantic-mypy]
 init_forbid_extra = True
