--- a/tests/mypy/configs/pyproject-plugin-strict-equality.toml
+++ b/tests/mypy/configs/pyproject-plugin-strict-equality.toml
@@ -35,6 +35,13 @@ disallow_untyped_defs = true
 disallow_untyped_decorators = false
 strict_equality = true
 
+python_version = '3.10'
+
+# 3.9 drop the following line:
+force_uppercase_builtins = true
+# 3.10 drop the following line:
+force_union_syntax = true
+
 [tool.pydantic-mypy]
 init_forbid_extra = true
 init_typed = true
