--- a/tests/mypy/configs/pyproject-plugin-strict.toml
+++ b/tests/mypy/configs/pyproject-plugin-strict.toml
@@ -29,6 +29,13 @@ check_untyped_defs = true
 no_implicit_reexport = true
 disallow_untyped_defs = true
 
+python_version = '3.10'
+
+# 3.9 drop the following line:
+force_uppercase_builtins = true
+# 3.10 drop the following line:
+force_union_syntax = true
+
 [tool.pydantic-mypy]
 init_forbid_extra = true
 init_typed = true
