Add todo comments

--- a/tests/mypy/configs/mypy-plugin-strict-no-any.ini
+++ b/tests/mypy/configs/mypy-plugin-strict-no-any.ini
@@ -21,9 +21,9 @@ warn_return_any = True
 
 python_version = 3.10
 
-# 3.9 drop the following line:
+# TODO 3.9 drop the following line:
 force_uppercase_builtins = True
-# 3.10 drop the following line:
+# TODO 3.10 drop the following line:
 force_union_syntax = True
 
 [pydantic-mypy]
