--- a/tests/mypy/configs/mypy-plugin.ini
+++ b/tests/mypy/configs/mypy-plugin.ini
@@ -14,9 +14,9 @@ python_version = 3.10
 # for strict mypy: (this is the tricky one :-))
 disallow_untyped_defs = True
 
-# 3.9 drop the following line:
+# TODO 3.9 drop the following line:
 force_uppercase_builtins = True
-# 3.10 drop the following line:
+# TODO 3.10 drop the following line:
 force_union_syntax = True
 
 [mypy-pydantic_core.*]
