--- a/tests/mypy/configs/pyproject-plugin-bad-param.toml
+++ b/tests/mypy/configs/pyproject-plugin-bad-param.toml
@@ -31,9 +31,9 @@ disallow_untyped_defs = true
 
 python_version = '3.10'
 
-# 3.9 drop the following line:
+# TODO 3.9 drop the following line:
 force_uppercase_builtins = true
-# 3.10 drop the following line:
+# TODO 3.10 drop the following line:
 force_union_syntax = true
 
 [tool.pydantic-mypy]
