Disable mypy tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -300,6 +300,8 @@ jobs:
       run: make test-typechecking-pyright
 
     - name: run typechecking integration tests (Mypy)
+      # Flaky:
+      if: false
       run: make test-typechecking-mypy
 
   coverage-combine:
