--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,16 +22,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pdm-project/setup-pdm@v4
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v3
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: true
-          allow-python-prereleases: true
+          enable-cache: true
 
       - name: install
-        run: |
-          pdm venv create --with-pip --force $PYTHON
-          pdm install -G linting -G email
+        run: uv sync --group linting
 
       - uses: pre-commit/action@v3.0.1
         with:
@@ -44,20 +41,18 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: pdm-project/setup-pdm@v4
+    - name: Setup uv
+      uses: astral-sh/setup-uv@v3
       with:
-        # cloudflare pages build containers run 3.8, hence using it here
-        python-version: '3.8'
+        enable-cache: true
 
     - name: install dependencies
       # Unlike the docs build, we don't use mkdocs_material-insiders
       # Because the secret for accessing the library is not accessible from forks, but we still want to run
       # this job on public CI runs.
-      run: |
-        pdm venv create --with-pip --force $PYTHON
-        pdm install -G docs
+      run: uv sync --group docs
 
-    - run: pdm run python -c 'import docs.plugins.main'
+    - run: uv run python -c 'import docs.plugins.main'
 
     # Adding local symlinks gets nice source locations like
     #   pydantic_core/core_schema.py
@@ -69,7 +64,7 @@ jobs:
         ln -s .venv/lib/python*/site-packages/pydantic_settings pydantic_settings
         ln -s .venv/lib/python*/site-packages/pydantic_extra_types pydantic_extra_types
 
-    - run: pdm run mkdocs build
+    - run: uv run mkdocs build
 
   test-memray:
     name: test memray
@@ -77,19 +72,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pdm-project/setup-pdm@v4
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v3
         with:
-          python-version: '3.12'
-          cache: true
+          enable-cache: true
 
       - name: install deps
         run: |
-          pdm venv create --with-pip --force $PYTHON
-          pdm install -G testing -G testing-extra -G email -G memray
-          pdm add pytest-memray
+          uv sync --group testing --group testing-extra --group memray
 
       - name: test
-        run: pdm run pytest --ignore=tests/mypy/ --ignore=tests/test_docs.py --memray
+        run: uv run pytest --ignore=tests/mypy/ --ignore=tests/test_docs.py --memray
 
   test:
     name: test ${{ matrix.os }} / ${{ matrix.python-version }}
@@ -130,20 +123,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: pdm-project/setup-pdm@v4
+    - name: Setup uv
+      uses: astral-sh/setup-uv@v3
       with:
-        python-version: ${{ matrix.python-version }}
-        cache: true
-        allow-python-prereleases: true
+        enable-cache: true
 
     - name: install deps
-      run: |
-        pdm venv create --with-pip --force $PYTHON
-        pdm install -G testing -G email -G timezone
+      run: uv sync --group testing --extra timezone
 
-    - run: pdm info && pdm list
-
-    - run: 'pdm run python -c "import pydantic.version; print(pydantic.version.version_info())"'
+    - run: 'uv run python -c "import pydantic.version; print(pydantic.version.version_info())"'
 
     - run: mkdir coverage
 
@@ -156,7 +144,7 @@ jobs:
         CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-without-deps
 
     - name: install extra deps
-      run: pdm install -G testing-extra -G email -G timezone
+      run: uv sync --group testing-extra --extra timezone
 
     - name: test with deps
       run: make test
@@ -192,27 +180,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pdm-project/setup-pdm@v4
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v3
         with:
-          python-version: '3.12'
-          cache: true
+          enable-cache: true
 
       - name: install deps
-        run: |
-          pdm venv create --with-pip --force $PYTHON
-          pdm install -G testing
+        run: uv sync --group testing
 
       - name: install example plugin
-        run: pdm add ./tests/plugin
+        run: uv add ./tests/plugin
 
-      - run: pdm run pytest ./tests/plugin
+      - run: uv run pytest ./tests/plugin
         env:
           TEST_PLUGIN: 1
 
-      # uninstalling is necessary to avoid creating a pdm cache shared with other jobs
+      # uninstalling is necessary because cache is shared with other jobs
       # which includes the plugin
       - name: uninstall example plugin
-        run: pdm remove ./tests/plugin
+        run: uv remove ./tests/plugin
 
   test-mypy:
     name: mypy ${{ matrix.mypy-version }} / ${{ matrix.python-version }}
@@ -240,27 +226,27 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: pdm-project/setup-pdm@v4
+    - name: Setup uv
+      uses: astral-sh/setup-uv@v3
       with:
-        python-version: ${{ matrix.python-version }}
-        cache: true
-        allow-python-prereleases: true
+        enable-cache: true
+
+    - name: Set up Python ${{ matrix.python-version }}
+      run: uv python install ${{ matrix.python-version }}
 
     - name: install deps
-      run: |
-        pdm venv create --with-pip --force $PYTHON
-        pdm install -G testing -G mypy
+      run: uv sync --group testing --group mypy
 
     - name: install mypy
       if: steps.cache.outputs.cache-hit != 'true'
       run: |
-        pdm remove -G mypy mypy && pdm add -dG mypy mypy==${{ matrix.mypy-version }}
-        pdm list
+        uv remove --group mypy mypy && uv add --group mypy mypy==${{ matrix.mypy-version }}
+        uv pip list
 
     - run: mkdir coverage
 
     - name: run mypy tests
-      run: pdm run coverage run -m pytest tests/mypy --test-mypy
+      run: uv run coverage run -m pytest tests/mypy --test-mypy
       env:
         COVERAGE_FILE: coverage/.coverage.linux-py${{ matrix.python-version }}-mypy${{ matrix.mypy-version }}
         CONTEXT: linux-py${{ matrix.python-version }}-mypy${{ matrix.mypy-version }}
@@ -283,15 +269,13 @@ jobs:
       with:
         node-version: '20'
 
-    - uses: pdm-project/setup-pdm@v4
+    - name: Setup uv
+      uses: astral-sh/setup-uv@v3
       with:
-        python-version: '3.12'
-        cache: true
+        enable-cache: true
 
     - name: install deps
-      run: |
-        pdm venv create --force $PYTHON
-        pdm install -G mypy
+      run: uv sync --group mypy
 
     - name: install Pyright
       run: npm install -g pyright@1.1.384  # keep this in sync with .pre-commit-config.yaml
@@ -322,7 +306,7 @@ jobs:
           pattern: coverage-*
           path: coverage
 
-      - run: pip install coverage[toml]
+      - run: uv pip install coverage[toml]
 
       - run: ls -la coverage
       - run: coverage combine coverage
@@ -381,21 +365,21 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: pdm-project/setup-pdm@v4
+    - name: Setup uv
+      uses: astral-sh/setup-uv@v3
       with:
-        python-version: ${{ matrix.python-version }}
-        cache: true
-        allow-python-prereleases: true
+        enable-cache: true
+
+    - name: Set up Python ${{ matrix.python-version }}
+      run: uv python install ${{ matrix.python-version }}
 
     - name: install deps
-      run: |
-        pdm venv create --with-pip --force $PYTHON
-        pdm install -G testing -G email
+      run: uv sync --group testing
 
     - name: install typing-extensions
       run: |
-        pdm remove typing-extensions && pdm add 'typing-extensions @ git+https://github.com/python/typing_extensions.git'
-        pdm list
+        uv remove typing-extensions && uv add typing-extensions
+        uv pip list
     - name: test
       run: make test
 
