--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
   - id: codespell
     additional_dependencies:
       - tomli
-    exclude: '^pdm\.lock$'
+    exclude: '^uv\.lock$'
 - repo: local
   hooks:
   - id: lint
@@ -26,13 +26,13 @@ repos:
     pass_filenames: false
   - id: usage_docs
     name: Usage docs links
-    entry: pdm run ./tests/check_usage_docs.py
+    entry: uv run ./tests/check_usage_docs.py
     files: '^pydantic/'
     types: [python]
     language: system
   - id: typecheck
     name: Typecheck
-    entry: pdm run pyright pydantic
+    entry: uv run pyright pydantic
     types: [python]
     language: node
     pass_filenames: false
