--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,7 +118,7 @@ docs = [
     "mike",
     "pytest-examples>=0.0.13",
     "pydantic-settings>=2.0b1",
-    "pydantic-extra-types>=2.9.0",
+    "pydantic-extra-types @ git+https://github.com/pydantic/pydantic-extra-types.git@main",
     "requests",
 ]
 linting = [
@@ -137,7 +137,7 @@ testing = [
     "pytest-examples",
     "faker>=18.13.0",
     "pytest-benchmark>=4.0.0",
-    "pytest-codspeed~=2.2.0",
+    "pytest-codspeed>=2.2.0",
     "packaging>=23.2",
     "jsonschema>=4.23.0",
 ]
@@ -146,7 +146,7 @@ testing-extra = [
     "ansi2html",
     "devtools",
     # used in docs tests
-    "sqlalchemy>=2.0,<3.0",
+    "sqlalchemy>=2.0",
     "greenlet>=3.0.0rc3; python_version < '3.13'",
 ]
 mypy = [
