--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,8 @@ jobs:
 
     - uses: pdm-project/setup-pdm@v4
       with:
-        # cloudflare pages build containers run 3.8, hence using it here
-        python-version: '3.8'
+        # cloudflare pages build uses python 3.12, see `/.python-version`
+        python-version: '3.12'
 
     - name: install dependencies
       # Unlike the docs build, we don't use mkdocs_material-insiders
