--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,8 @@ classifiers = [
 requires-python = '>=3.8'
 dependencies = [
     "typing-extensions>=4.12.2",
-    'annotated-types>=0.6.0',
-    "pydantic-core==2.25.1",
+    "annotated-types>=0.6.0",
+    "pydantic-core==2.26.0",
 ]
 dynamic = ['version', 'readme']
 
