--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,7 @@ jobs:
         uses: astral-sh/setup-uv@v3
         with:
           enable-cache: true
+          python-version: '3.12'
 
       - name: install deps
         run: |
@@ -186,6 +187,7 @@ jobs:
         uses: astral-sh/setup-uv@v3
         with:
           enable-cache: true
+          python-version: '3.12'
 
       - name: install deps
         run: uv sync --group testing
@@ -272,6 +274,7 @@ jobs:
       uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
+        python-version: '3.12'
 
     - name: install deps
       run: uv sync --group mypy
