--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -20,6 +20,7 @@ jobs:
         uses: astral-sh/setup-uv@v3
         with:
           enable-cache: true
+          python-version: '3.12'
 
       - name: install deps
         run: uv sync --group testing --group testing-extra --extra email --frozen
