--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,6 @@ jobs:
         with:
           enable-cache: true
 
-
       - name: install
         run: uv sync --python ${{ matrix.python-version }} --group linting
 
@@ -46,9 +45,6 @@ jobs:
       uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
-
-    - name: Set up Python 3.12
-      run: uv python install 3.12
 
     - name: install dependencies
       # Unlike the docs build, we don't use mkdocs_material-insiders
@@ -81,13 +77,8 @@ jobs:
         with:
           enable-cache: true
 
-      - name: Set up Python 3.12
-        run: uv python install 3.12
-
       - name: install deps
-        run: |
-          uv venv --python 3.12
-          uv sync --group testing--group testing-extra --group memray
+        run: uv sync --python 3.12 --group testing--group testing-extra --group memray
 
       - name: test
         run: uv run pytest --ignore=tests/mypy/ --ignore=tests/test_docs.py --memray
@@ -136,9 +127,6 @@ jobs:
       with:
         enable-cache: true
 
-    - name: Set up Python ${{ matrix.python-version }}
-      run: uv python install ${{ matrix.python-version }}
-
     - name: install deps
       run: uv sync --python ${{ matrix.python-version }} --group testing --extra timezone
 
@@ -155,7 +143,7 @@ jobs:
         CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-without-deps
 
     - name: install extra deps
-      run: uv sync --group testing --group testing-extra --extra timezone
+      run: uv sync --python ${{ matrix.python-version }} --group testing --group testing-extra --extra timezone
 
     - name: test with deps
       run: make test
@@ -196,9 +184,6 @@ jobs:
         uses: astral-sh/setup-uv@v3
         with:
           enable-cache: true
-
-      - name: Set up Python 3.12
-        run: uv python install 3.12
 
       - name: install deps
         run: uv sync --python 3.12 --group testing
@@ -247,9 +232,7 @@ jobs:
         enable-cache: true
 
     - name: install deps
-      run: |
-        uv venv --python ${{ matrix.python-version }}
-        uv sync --group testing --group mypy
+      run: uv sync --python ${{ matrix.python-version }} --group testing --group mypy
 
     - name: install mypy
       if: steps.cache.outputs.cache-hit != 'true'
@@ -285,9 +268,6 @@ jobs:
       uses: astral-sh/setup-uv@v3
       with:
         enable-cache: true
-
-    - name: Set up Python 3.12
-      run: uv python install 3.12
 
     - name: install deps
       run: uv sync --python 3.12 --group mypy
@@ -386,9 +366,7 @@ jobs:
         enable-cache: true
 
     - name: install deps
-      run: |
-        uv venv --python ${{ matrix.python-version }}
-        uv sync --group testing
+      run: uv sync --python ${{ matrix.python-version }} --group testing
 
     - name: install typing-extensions
       run: uv pip install 'typing-extensions @ git+https://github.com/python/typing_extensions.git'
